fix(chore): Allow event names to wrap instead of getting cut off.

--- a/html/themes/custom/common_design_subtheme/components/hri-calendar/hri-calendar.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-calendar/hri-calendar.css
@@ -52,3 +52,8 @@
 .hri-calendar__read-more {
   margin-top: 1rem;
 }
+
+/* Wrap long event names in the grid. */
+.fc-event-title.fc-sticky {
+  white-space: wrap;
+}
