--- a/html/themes/custom/common_design_subtheme/components/hri-fullcalendar/hri-fullcalendar.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-fullcalendar/hri-fullcalendar.css
@@ -14,3 +14,8 @@
 #fullCalModal br {
   display: none;
 }
+
+/* Wrap long event names in the grid. */
+.fc-event-title.fc-sticky {
+  white-space: wrap;
+}
